Section 9: updated jwt